RESOLVED FIXED 251000
REGRESSION (255063@main): visibility:visible child of visibility:hidden button remains invisible
https://bugs.webkit.org/show_bug.cgi?id=251000
Summary REGRESSION (255063@main): visibility:visible child of visibility:hidden butto...
account+webkit-bugzilla@boermans.name
Reported 2023-01-23 01:51:49 PST
When `visibility:hidden;` is applied to an element, I expect visibility of child elements with `visibility:visible` to be restored. In Release 161 (Safari 16.4, WebKit 18615.1.17.6) this does not work as expected when the hidden parent element is a `<button>`, e.g.: <button style="visibility: hidden"> <b style="visibility: visible">Remains hidden</b> </button> Test page: https://jumpy-exciting-weeder.glitch.me/ Practical use case for this pattern: https://www.scottohara.me/blog/2022/11/07/responsive-accessibility.html
Attachments
Patch (3.33 KB, patch)
2023-01-23 15:39 PST, zalan
no flags
Patch (4.59 KB, patch)
2023-01-23 19:01 PST, zalan
no flags
Patch (4.63 KB, patch)
2023-01-24 07:20 PST, zalan
no flags
Patch (4.65 KB, patch)
2023-01-24 11:09 PST, zalan
no flags
Radar WebKit Bug Importer
Comment 1 2023-01-23 11:26:45 PST
zalan
Comment 2 2023-01-23 15:39:13 PST
zalan
Comment 3 2023-01-23 15:41:29 PST
(In reply to account+webkit-bugzilla@boermans.name from comment #0) > When `visibility:hidden;` is applied to an element, I expect visibility of > child elements with `visibility:visible` to be restored. > > In Release 161 (Safari 16.4, WebKit 18615.1.17.6) this does not work as > expected when the hidden parent element is a `<button>`, e.g.: > > <button style="visibility: hidden"> > <b style="visibility: visible">Remains hidden</b> > </button> > > Test page: > https://jumpy-exciting-weeder.glitch.me/ > > Practical use case for this pattern: > https://www.scottohara.me/blog/2022/11/07/responsive-accessibility.html Thank you for the detailed bug report and test reduction!
zalan
Comment 4 2023-01-23 19:01:24 PST
zalan
Comment 5 2023-01-24 07:20:10 PST
Darin Adler
Comment 6 2023-01-24 08:58:18 PST
Comment on attachment 464623 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=464623&action=review > Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContentPainter.cpp:71 > + // Fully truncated boxes are visually empty and they down show their descendants either (unlike visibility property). Typo here: "down" instead of "don't".
zalan
Comment 7 2023-01-24 11:09:13 PST
EWS
Comment 8 2023-01-24 13:02:10 PST
Committed 259306@main (7a1613fa8b15): <https://commits.webkit.org/259306@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464634 [details].
Note You need to log in before you can comment on or make changes to this bug.