REGRESSION (255063@main): visibility:visible child of visibility:hidden button remains invisible https://bugs.webkit.org/show_bug.cgi?id=251000 <rdar://problem/104565584>

Reviewed by Antti Koivisto and Darin Adler.

Let's not bail out of painting too early for "visibility: hidden". Such inline-block (and inline-block like) boxes may have visible descendants.

* LayoutTests/fast/block/paint-non-visible-with-visible-child-expected.html: Added.
* LayoutTests/fast/block/paint-non-visible-with-visible-child.html: Added.
* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContentPainter.cpp:
(WebCore::LayoutIntegration::InlineContentPainter::paintDisplayBox):

Canonical link: https://commits.webkit.org/259306@main